[package]
name = "bevy-demo-ruins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: update to 0.10.0 and remove the patch below
[dependencies]
bevy = { version = "0.9.0", features = ['jpeg', 'tonemapping_luts'] }

[patch.crates-io]
bevy = { path = "../bevy" }
